# undergrad-thesis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  main.bib  main.tex  slide.tex  ufbathesis.cls  ufbathesis.txt
demo/: CMakeLists.txt  Target.java  run.sh
demo/hello-jvmtiprof/: CMakeLists.txt  hello.cpp
demo/method-hook/: CMakeLists.txt  hook.cpp
demo/sample-application-state/: CMakeLists.txt  sample.cpp
demo/sample-execution/: CMakeLists.txt  sample.cpp
include/jvmtiprof/: jvmtiprof.h
include/profagent/: profagent.h
lib/: CMakeLists.txt  agent.cpp  bit.hpp  config.hpp  env.cpp  env.hpp  env_enter.cpp  env_export.cpp  execution_sampler.cpp  execution_sampler.hpp  jvmti_agent_thread.cpp  jvmti_agent_thread.hpp  method_hooker.cpp  method_hooker.hpp  perf.cpp  perf.hpp  phase.cpp  phase.hpp  sampling_thread.cpp  sampling_thread.hpp
lib/jvm/: agent_thread.cpp  agent_thread.hpp  jni_ref.hpp  monitor.hpp
lib/native/: JVMTIPROF.h  JVMTIPROF.java
src/: abstract-en.tex  abstract-pt.tex  acknowledgements.tex  api.tex  background.tex  biblio.bib  conclusion.tex  content.tex  evaluation.tex  introduction.tex  macros.tex  methodology.tex
src/listing/: JNIExample.cpp  JNIExample.java  com_waldo_JNIExample.h  demo-sample-execution.cpp  demo-sample-execution.slide1.cpp  demo-sample-execution.slide2.cpp  example-jvmti.cpp  example-jvmti.slide.cpp
